[gd_scene load_steps=5 format=3 uid="uid://clld7e8iwr2r2"]

[ext_resource type="Script" uid="uid://cp7goghpomybk" path="res://totem.gd" id="1_jwx21"]
[ext_resource type="Texture2D" uid="uid://bb0l3885xahn4" path="res://assets/sprites/enviroment/totems/Totem_Leer_1.png" id="2_newnr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l68uo"]
size = Vector2(48, 144)

[sub_resource type="CircleShape2D" id="CircleShape2D_jwx21"]
radius = 320.0

[node name="Totem" type="Node2D"]
script = ExtResource("1_jwx21")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_l68uo")

[node name="ProximityArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
shape = SubResource("CircleShape2D_jwx21")

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -120.0
offset_right = 20.0
offset_bottom = -75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "?"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="TotemLeer1" type="Sprite2D" parent="."]
position = Vector2(-2, -4)
texture = ExtResource("2_newnr")

[connection signal="body_entered" from="ProximityArea" to="." method="_on_proximity_entered"]
