[gd_scene load_steps=3 format=3 uid="uid://clld7e8iwr2r2"]

[ext_resource type="Script" uid="uid://cp7goghpomybk" path="res://totem.gd" id="1_jwx21"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l68uo"]
size = Vector2(48, 144)

[node name="Totem" type="Area2D"]
script = ExtResource("1_jwx21")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l68uo")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -75.5
offset_right = 20.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.49056935, 0.18958962, 0.28944176, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
